--- a/Bilibili/bili/css/style.css
+++ b/Bilibili/bili/css/style.css
@@ -129,7 +129,6 @@
     display: flex;
     width: 190px;
     height: 120px;
-    /* background: rgb(159, 158, 158); */
 }
 .menuleft-ul {
     display: flex;
@@ -172,7 +171,6 @@
 .menucenter {
     width: 1700px;
     height: 100px;
-    /* background: rgb(192, 189, 189);  */
     margin-left: 10px;
     display: flex;
     align-items: center;
@@ -209,7 +207,6 @@
 .menuright {
     width: 490px;
     height: 120px;
-    /* background: #ccc;  */
     display: flex;
     align-items: center;
 }
@@ -265,13 +262,13 @@
     top: 0;
     left: 0;
     opacity: 0;
-    transition: opacity 0.5s;
+    transition: 0.5s;
     z-index: 0;
 }
 .box-img img {
     width: 100%;
     height: 100%;
-    object-fit: fill;/* 图片显示完全 */
+    object-fit: fill;
 }
 .box-img.active {
     opacity: 1; 
@@ -362,6 +359,7 @@
     white-space: nowrap;
     overflow: hidden;
     max-width: 70%;
+    text-overflow: ellipsis;
 }
 .submenu {
     list-style: none;
@@ -462,7 +460,7 @@
     left: 8px;
     z-index: 5; 
     display: flex;
-    gap: 12px; /* 播放量和弹幕数量间距 */
+    gap: 12px; 
     color: #fff;
     font-size: 14px;
 }
